--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,19 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --primary-blue: #2C55C0;
+  --primary-blue-foreground: #faf9f6;
+  --secondary-blue: #2563EB;
+  --secondary-blue-foreground: #faf9f6;
+  --accent-blue: #3B82F6;
+  --accent-blue-foreground: #faf9f6;
+  --muted: #faf9f6;
+  --muted-foreground: #0F172A;
+  --destructive: #EF4444;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --: var(--font-geist-sans);
+  --o: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -45,78 +54,94 @@
 
 :root {
   --radius: 0.625rem;
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --card: #faf9f6;
+  --card-foreground: #0F172A;
+  --popover: #faf9f6;
+  --popover-foreground: #0F172A;
+  --primary: #2C55C0;
+  --primary-foreground: #faf9f6;
+  --secondary: #2563EB;
+  --secondary-foreground: #faf9f6;
+  --muted: #faf9f6;
+  --muted-foreground: #0F172A;
+  --accent: #3B82F6;
+  --accent-foreground: #faf9f6;
+  --destructive: #EF4444;
+  --border: #E5E7EB;
+  --input: #E5E7EB;
+  --ring: #2C55C0;
+  --chart-1: #2C55C0;
+  --chart-2: #2563EB;
+  --chart-3: #3B82F6;
+  --chart-4: #60A5FA;
+  --chart-5: #93C5FD;
+  --sidebar: #faf9f6;
+  --sidebar-foreground: #0F172A;
+  --sidebar-primary: #2C55C0;
+  --sidebar-primary-foreground: #faf9f6;
+  --sidebar-accent: #3B82F6;
+  --sidebar-accent-foreground: #faf9f6;
+  --sidebar-border: #E5E7EB;
+  --sidebar-ring: #2C55C0;
+  --background: #faf9f6;
+  --foreground: #0F172A;
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --background: #0F172A;
+  --foreground: #faf9f6;
+  --card: #2C55C0;
+  --card-foreground: #faf9f6;
+  --popover: #2C55C0;
+  --popover-foreground: #faf9f6;
+  --primary: #2563EB;
+  --primary-foreground: #faf9f6;
+  --secondary: #3B82F6;
+  --secondary-foreground: #faf9f6;
+  --muted: #1E293B;
+  --muted-foreground: #faf9f6;
+  --accent: #2563EB;
+  --accent-foreground: #faf9f6;
+  --destructive: #EF4444;
+  --border: #334155;
+  --input: #1E293B;
+  --ring: #2563EB;
+  --chart-1: #2563EB;
+  --chart-2: #3B82F6;
+  --chart-3: #60A5FA;
+  --chart-4: #93C5FD;
+  --chart-5: #BFDBFE;
+  --sidebar: #2C55C0;
+  --sidebar-foreground: #faf9f6;
+  --sidebar-primary: #2563EB;
+  --sidebar-primary-foreground: #faf9f6;
+  --sidebar-accent: #3B82F6;
+  --sidebar-accent-foreground: #faf9f6;
+  --sidebar-border: #334155;
+  --sidebar-ring: #2563EB;
 }
 
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .font-nura {
+    font-family: var(--font-nura);
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6{
+    font-family: var(--font-nura);
   }
 }
